--- a/style.css
+++ b/style.css
@@ -11,16 +11,20 @@
    --white: #f7f8f8;
    --black: #060606;
    --dark-gray: #1a1a1a;
+
+   --header-height: 48px;
 }
 
 body {
     background-color: var(--black);
+
+    text-rendering: optimizelegibility;
 }
 
-/* Header */
+/*------ Header ------*/
 header {
     width: 100%;
-    height: 50px;
+    height: var(--header-height);
 
     display:flex;
     justify-content: center;
@@ -30,16 +34,23 @@ header {
     z-index: 1;
 }
 
-header::before {
+header::before, header::after {
+    inset: -1px 0px -50%;
+}
+  
+  header::before {
     content: "";
     position: fixed;
     top: 0;
     width: 100%;
-    height: 60px;
-    backdrop-filter: blur(6px);
+    height: 70px;
     z-index: -1;
-  }
 
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter:blur(12px);
+    mask-image: linear-gradient(to bottom,black var(--header-height),transparent);
+    -webkit-mask-image:linear-gradient(to bottom,black var(--header-height),transparent);
+}
 
 
 nav {
@@ -55,6 +66,8 @@ nav {
     font-weight: 500;
 
     border-bottom: 1px solid var(--dark-gray);
+    margin-right: 40px;
+    margin-left: 40px;
 }
 
 nav h1 {
@@ -66,11 +79,16 @@ nav h1 {
 nav ul {
     display:inline-flex;
     margin-left: auto;
+    height: 100%;
 }
 
 nav li {
     margin-left: 30px;
     cursor: pointer;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
 }
 
 nav li:nth-child(3){
@@ -80,6 +98,7 @@ nav li:nth-child(3){
 nav li:nth-child(2){
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 nav li:nth-child(2) img {
@@ -92,3 +111,44 @@ nav li:nth-child(2) img {
 nav li:nth-child(2):hover img {
     transform: rotate(180deg);
 }
+
+.projets-window-container {
+    opacity: 0%;
+    position: absolute;
+    background-color: var(--black);
+    border: 1px solid var(--dark-gray);
+    transform: translateY(100px);
+    border-radius: 10px;
+    padding: 10px;
+    width: 150px;
+    transition: .2s;
+    visibility: hidden;
+}
+
+.projects-window-text-box {
+    font-size: 15px;
+    border-radius: 6px;
+    padding: 10px;
+}
+
+.projects-window-text-box:hover {
+    background-color: var(--dark-gray);
+}
+
+nav li:nth-child(2):hover .projets-window-container{
+    opacity: 100%;
+    visibility: visible;
+    transform: translateY(114px);
+}
+
+
+
+
+
+
+@media (max-width: 640px) {
+    nav {
+        color: red;
+    }
+}
+  
