--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 
    --header-height: 48px;
    --radius: 10px;
+   --project-color: rgb(23, 23, 23);
 }
 
 body {
@@ -251,41 +252,76 @@ main section {
     max-width: 100%;
 }
 
-#projets .projects-container {
-    margin-top: 50px;
-    width: 100%;
-    height: fit-content;
-
+.projects-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 8px;
-}
-
-.project {
-    background-color: rgba(255, 255, 255, 0.02);
-    border: 1px solid rgba(255, 255, 255, 0.01);
-    width: calc((100% / 3) - (16px / 3));
-    height: 300px;
+    gap: 8px;  
+    max-width: 916px;
+    width: calc(100% - 20px);
+  }
+  
+  .projects-container:hover > .project::after {
+    opacity: 1;
+  }
+  
+  .project {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
     cursor: pointer;
-    border-radius: var(--radius);
+    display: flex;
+    height: 260px;
+    flex-direction: column;
     position: relative;
-}
-
-.project::before {
-    background-color: radial-gradient(
-        800px circle at 100px 100px,
-        rgba(255, 255, 255, 0.6),
-        transparent 40%
-    );
+    width: 300px;  
+  }
+  
+  .project:hover::before {
+    opacity: 1;
+  }
+  
+  .project::before,
+  .project::after {
     border-radius: inherit;
-    content:"";
+    content: "";
     height: 100%;
-    width: 100%;
+    left: 0px;
+    opacity: 0;
     position: absolute;
-    left: 0;
-    height: 0;
+    top: 0px;
+    transition: opacity 500ms;
+    width: 100%;
+  }
+  
+  .project::before {
+    background: radial-gradient(
+      800px circle at var(--mouse-x) var(--mouse-y), 
+      rgba(255, 255, 255, 0.06),
+      transparent 40%
+    );
+    z-index: 3;
+  }
+  
+  .project::after {  
+    background: radial-gradient(
+      600px circle at var(--mouse-x) var(--mouse-y), 
+      rgba(255, 255, 255, 0.4),
+      transparent 40%
+    );
+    z-index: 1;
+  }
+  
+  .project > .project-content {
+    background-color: var(--project-color);
+    border-radius: inherit;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    inset: 1px;
+    padding: 10px;
+    position: absolute;
     z-index: 2;
-}
+  }
+
 
 @keyframes slideTop {
     0% {
