--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 /*-------- Body --------*/
 body {
-    background-color: #060606;
+    background-color: var(--background-color);
 
     /* Reset default styles */
     padding: 0;
@@ -33,6 +33,28 @@ header {
     justify-content: center;
 
     color: var(--white);
+}
+
+/* Blur header background */
+header::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    content: "";
+
+    width: 100%;
+    height: calc(var(--header-height) + 20px);
+
+    z-index: -1;
+
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter:blur(12px);
+    /* Blur fade to transparent */
+    mask-image: linear-gradient(to bottom,black var(--header-height),transparent);
+    -webkit-mask-image:linear-gradient(to bottom,black var(--header-height),transparent);
+
+    transition: .3s;
 }
 
 /* Navbar */
@@ -212,7 +234,19 @@ li:nth-child(2):hover .header-projects-container {
         display: none;
     }
 
-    /* Set style for all text elements in header */
+    /* Set a transition for all elements in header */
+    header * {
+        transition: .15s ease-out;
+        transition-delay: 0s;
+    }
+
+    /* Transition delay for waiting the header height transition to be finished */ 
+    header.active * {
+        transition: .3s ease-out;
+        transition-delay: .1s;
+    }
+
+    /* Set style for all text elements in <header> */
     header a,
     .header-projects-container a p {
         color: var(--white);
@@ -227,7 +261,7 @@ li:nth-child(2):hover .header-projects-container {
         flex-wrap: wrap;
     }
 
-    /* Select all ul */
+    /* Select all <ul> */
     header nav ul {
         width: 100%;
         height: fit-content;
@@ -236,9 +270,12 @@ li:nth-child(2):hover .header-projects-container {
         display: flex;
         align-items: flex-start;
         flex-direction: column;
+
+        visibility: hidden;
+        opacity: 0;
     }
 
-    /* Select all li */
+    /* Select all <li> */
     header nav ul li {
         margin: 0;
         padding: 0;
@@ -248,7 +285,7 @@ li:nth-child(2):hover .header-projects-container {
         border-bottom: 1px solid var(--dark-gray);
     }
 
-    /* Select Projects li */
+    /* Select Projects <li> */
     header nav ul li:nth-child(2) {
         order: 4;
         position: relative;
@@ -272,19 +309,34 @@ li:nth-child(2):hover .header-projects-container {
         top: 100%;
       }
 
-    /* remove all projects img */
+    /* remove all projects <img> */
     .header-projects-container a img {
         display: none;
     }
 
-    /* Select .header-projects-container a whether it is being hovered or not */
+    /* Select .header-projects-container <a> whether it is being hovered or not */
     .header-projects-container a:hover,
     .header-projects-container a {
         background-color: transparent;
-        height: var(--header-height);
+        height: calc(var(--header-height) + 1px);
         border-bottom: 1px solid var(--dark-gray);
         border-radius: 0;
         padding: 0;
     }
+
+    header.active::before {
+        height: 100vh;
+
+        --background-color: rgba(6, 6, 6, 0.6);; /* change the --background-color var opacity */
+        background-color: var(--background-color);
+        mask-image: none; /* Delete the linear gradient */
+        backdrop-filter: blur(12px); /* Add blur */
+        -webkit-backdrop-filter: blur(12px);
+    }
+
+    /* Show the navbar when header have .active class */
+    header.active nav ul {
+        visibility: visible;
+        opacity: 1;
+    }
 }
-  
