--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@ header::before {
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter:blur(12px);
     /* Blur fade to transparent */
-    mask-image: linear-gradient(to bottom,black var(--header-height),transparent);
-    -webkit-mask-image:linear-gradient(to bottom,black var(--header-height),transparent);
+    mask-image: linear-gradient(to bottom,black 0px, black var(--header-height), transparent);
+    -webkit-mask-image:linear-gradient(to bottom, black 0px, black var(--header-height),transparent);
 
     transition: .3s;
 }
@@ -221,9 +221,162 @@ li:nth-child(2):hover .header-projects-container {
     opacity: 1;
     top: 42px;
 }
+/*-------- Header End --------*/
+
+/*-------- Main --------*/
+main {
+    height: fit-content;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Set the size of main sections */
+#home, #project, #about, #contact {
+    width: 1050px;
+    height: 100vh;
+}
+
+/*-------- Home --------*/
+#home {
+    padding-top: var(--header-height);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#home .top-part {
+    position: relative;
+    height: 430px;
+    width: 100%;
+
+    display: flex;
+    align-items: end;
+    margin-bottom: 50px;
+}
+
+#home .top-part .background {
+    width: 100%;
+    height: 100%;
+}
+
+#home .top-part .background div {
+    width: 50px;
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 50%;
+    padding: 6px;
+    overflow: hidden;
+}
+
+#wordpress {
+    background-color: #028cb0;
+    box-shadow: 0px 0px 100px 20px rgba(2,140,176,0.75);
+    -webkit-box-shadow: 0px 0px 100px 20px rgba(2,140,176,0.75);
+    -moz-box-shadow: 0px 0px 100px 20px rgba(2,140,176,0.75);
+}
+
+#html {
+    background-color: #e44d26;
+    box-shadow: 0px 0px 100px 20px rgba(228,77,38,0.75);
+    -webkit-box-shadow: 0px 0px 100px 20px rgba(228,77,38,0.75);
+    -moz-box-shadow: 0px 0px 100px 20px rgba(228,77,38,0.75);
+}
+
+#css {
+    background-color: #1172b8;
+    box-shadow: 0px 0px 100px 20px rgba(17,114,184,0.75);
+    -webkit-box-shadow: 0px 0px 100px 20px rgba(17,114,184,0.75);
+    -moz-box-shadow: 0px 0px 100px 20px rgba(17,114,184,0.75);
+}
+
+#javascript {
+    background-color: #f7df1e;
+    box-shadow: 0px 0px 100px 20px rgba(247,223,30,0.75);
+    -webkit-box-shadow: 0px 0px 100px 20px rgba(247,223,30,0.75);
+    -moz-box-shadow: 0px 0px 100px 20px rgba(247,223,30,0.75);
+}
+
+
+#home .top-part .picture {
+    position: absolute;
+    transform: translate(-50%);
+    left: 50%;
+    width: 410px;
+    height: 360px;
+    background-image: url('src/img/picture1.png');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#home .top-part .picture::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 10%, rgba(6, 6, 6, 1));
+}
+ 
+#home .text {
+    width: 800px;
+    height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#home .text * {
+    margin: 0;
+}
+
+#home .text h1:nth-child(1) {
+    font-size: 20px;
+    font-family: 'Poppins';
+    font-weight: 700;
+    letter-spacing: 4px;
+
+    color: transparent;
+    background-image: linear-gradient(to right, #4159ac, #673fd7);
+    -webkit-background-clip: text;
+    background-clip: text;
+    margin-bottom: 22px;
+}
+
+#home .text h1:nth-child(2) {
+    font-size: 27px;
+    font-family: 'Poppins';
+    font-weight: 700;
+    color: var(--white);
+    margin-bottom: 22px;
+}
+
+#home p {
+    width: 780px;
+    font-size: 18px;
+    font-family: 'Poppins';
+    font-weight: 500;
+    text-align: center;
+    color: var(--light-gray);
+}
+/*-------- Home End --------*/
+
+/*-------- Main End --------*/
+
 
 /*-------- Mobile Screen Size --------*/
 @media (max-width: 700px) {
+    /*-------- Header -------- */
     /* Show the menu burger icon */
     #menu-burger {
         visibility: visible;
@@ -339,4 +492,5 @@ li:nth-child(2):hover .header-projects-container {
         visibility: visible;
         opacity: 1;
     }
+    /*--------- Header End --------*/
 }
