--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ main {
 
 /* Set the size of main sections */
 #home, #project, #about, #contact {
-    width: 1050px;
+    width: min(1050px, 100%);
     height: 100vh;
 }
 
@@ -260,8 +260,12 @@ main {
 }
 
 #home .top-part .background {
+    position: relative;
     width: 100%;
     height: 100%;
+    -webkit-box-shadow: inset 0px 0px 25px 30px #060606; 
+    box-shadow: inset 0px 0px 25px 30px #060606;
+    overflow: hidden;
 }
 
 #home .top-part .background div {
@@ -274,7 +278,7 @@ main {
 
     border-radius: 50%;
     padding: 6px;
-    overflow: hidden;
+    z-index: -2;
 }
 
 /* Home background icon */
@@ -287,26 +291,26 @@ main {
 }
 
 #wordpress {
-    top: 250px;
-    left: 120px;
+    top: 60%;
+    left: 12%;
     box-shadow: 0px 0px 100px 20px rgba(2,140,176,0.75);
 }
 
 #html {
-    top: 100px;
-    left: 320px;
+    top: 24%;
+    left: 30%;
     box-shadow: 0px 0px 100px 20px rgba(228,77,38,0.75);
 }
 
 #css {
-    top: 240px;
-    left: 580px;
+    top: 54%;
+    left: 54%;
     box-shadow: 0px 0px 100px 20px rgba(17,114,184,0.75);
 }
 
 #javascript {
-    top: 120px;
-    left: 800px;
+    top: 28%;
+    left: 76%;
     box-shadow: 0px 0px 100px 20px rgba(247,223,30,0.75);
 }
 
@@ -320,16 +324,7 @@ main {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-}
-
-#home .top-part .picture::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 10%, rgba(6, 6, 6, 1));
+    z-index: -1;
 }
  
 #home .text {
@@ -498,4 +493,21 @@ main {
         opacity: 1;
     }
     /*--------- Header End --------*/
+
+    #home .top-part .background {
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+
+    #home .top-part .background::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100px;
+        background: rgb(6,6,6);
+        background: linear-gradient(0deg, rgba(6,6,6,1) 0%, rgba(0,0,0,0) 100%); 
+    }
 }
