--- a/style.css
+++ b/style.css
@@ -318,17 +318,20 @@ main {
     position: absolute;
     transform: translate(-50%);
     left: 50%;
-    width: 410px;
-    height: 360px;
+    bottom: 0;
+    width: 400px;
+    height: 400px;
     background-image: url('src/img/picture1.png');
-    background-position: center center;
-    background-size: cover;
+    background-position: bottom;
+    background-size: contain;
     background-repeat: no-repeat;
     z-index: -1;
 }
  
 #home .text {
-    width: 800px;
+    width: min(780px, 90vw);
+    margin-left: 5vw;
+    margin-right: 5vw;
     height: fit-content;
 
     display: flex;
@@ -357,12 +360,12 @@ main {
     font-size: 27px;
     font-family: 'Poppins';
     font-weight: 700;
+    text-align: center;
     color: var(--white);
     margin-bottom: 22px;
 }
 
 #home p {
-    width: 780px;
     font-size: 18px;
     font-family: 'Poppins';
     font-weight: 500;
@@ -494,12 +497,33 @@ main {
     }
     /*--------- Header End --------*/
 
+    /*-------- Home --------*/
+    #home .text h1:nth-child(1) {
+        text-align: justify;
+    }
+
+    #home p {
+        text-align: justify;
+    }
+
+    #home .top-part {
+        height: 60vw;
+        margin-bottom: 30px;
+    }
+
+    #home .top-part .picture {
+        width: 60vw;
+        height: 60vw;
+    }
+
+    /* Remove Home box shadow */
     #home .top-part .background {
         -moz-box-shadow: none;
         -webkit-box-shadow: none;
         box-shadow: none;
     }
 
+    /* Home background gradient */
     #home .top-part .background::after {
         content: "";
         position: absolute;
@@ -510,4 +534,10 @@ main {
         background: rgb(6,6,6);
         background: linear-gradient(0deg, rgba(6,6,6,1) 0%, rgba(0,0,0,0) 100%); 
     }
+
+    #home .top-part .background div {
+        width: 10vw;
+        height: 10vw;
+    }
+    /*-------- Home End --------*/
 }
