--- a/style.css
+++ b/style.css
@@ -490,16 +490,25 @@ main {
 
     /*-------- Home --------*/
     #home .text h1:nth-child(1) {
-        text-align: justify;
+        font-size: max(4.5vw, 12px);
+        margin-bottom: max(2.4vw, 15px);
+        margin-top: max(3vw, 25px);
+    }
+
+    #home .text h1:nth-child(2) {
+        text-align: center;
+        font-size: max(5vw, 14px);
+        margin-bottom: max(2.4vw, 15px);
     }
 
     #home p {
-        text-align: justify;
+        text-align: center;
+        font-size: max(3vw, 10px);
     }
 
     #home .top-part {
         height: 60vw;
-        margin-bottom: 30px;
+        margin-bottom: 0;
     }
 
     #home .top-part .picture {
