--- a/style.css
+++ b/style.css
@@ -238,10 +238,8 @@ main {
 
 /* Set the size of main sections */
 #home, #project, #about, #contact {
-    width: min(1050px, calc(100% - 50px));
+    width: min(1050px, 100%);
     height: 100vh;
-    margin-left: 25px;
-    margin-right: 25px;
 }
 
 /*-------- Home --------*/
@@ -459,7 +457,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     gap: 8px;  
-    width: 100%;
+    width: calc(100% - 50px);
 }
 
 #cards:hover > .card::after {
