--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 /* Set the size of main sections */
@@ -440,6 +441,7 @@ main {
     background-image: linear-gradient(to right, #ff6262, #ff9c00);
     -webkit-background-clip: text;
     background-clip: text;
+    margin-top: 0;
     margin-bottom: 22px;
 }
 
@@ -568,8 +570,20 @@ main {
     color: var(--light-gray);
 }
 
-/*-------- Main End --------*/
+/* Card Size */
+@media (max-width: 800px) {
+    .card {
+        width: calc((100% - 8px) / 2);
+    }
+}
 
+@media (max-width: 550px) {
+    .card {
+        width: 100%;
+    }
+}
+
+/*-------- Main End --------*/
 
 /*-------- Mobile Screen Size --------*/
 @media (max-width: 700px) {
@@ -684,7 +698,7 @@ main {
 
     /*-------- Home --------*/
     #home {
-        padding-bottom: max(8vw, 50px);
+        padding-bottom: max(9vw, 70px);
     }
 
     #home .text h1:nth-child(1) {
@@ -695,7 +709,7 @@ main {
 
     #home .text h1:nth-child(2) {
         text-align: center;
-        font-size: max(5vw, 14px);
+        font-size: max(5vw, 16px);
         margin-bottom: max(2.4vw, 15px);
     }
 
@@ -738,4 +752,25 @@ main {
         height: 10vw;
     }
     /*-------- Home End --------*/
+    #project {
+        padding-top: max(9vw, 60px);
+        padding-bottom: max(9vw, 60px);
+    }
+
+    #project .text {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+
+    .project-title {
+        font-size: max(5vw, 16px);
+        width: fit-content;
+        margin-bottom: max(2.4vw, 15px);
+    }
+    
+    /* Project Description */
+    .project-description {
+        font-size: max(3vw, 14px);
+        margin-bottom: max(8vw, 40px)
+    }
 }
