--- a/style.css
+++ b/style.css
@@ -80,6 +80,12 @@ header nav {
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(1deg) brightness(101%) contrast(104%);
 }
 
+header nav .logo {
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+}
+
 header nav .menu-burger-container {
     height: 100%;
 
